--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "illuminate/redis": "^5.8",
         "laravel/lumen-framework": "5.8.*",
         "overtrue/wechat": "^4.1",
+        "ramsey/uuid": "^3.8",
         "vlucas/phpdotenv": "^3.3"
     },
     "require-dev": {
